# halipeto

./: COPYRIGHT  Demo.lhs  Dictionary.lhs  Functions.lhs  Halipeto.tex  How.lhs  Intro.lhs  LICENCE  MOTTO  Pages.lhs  SimpleDB.lhs  Template.lhs  halipeto.cabal  haskell.sty  manifest  wrap
FromHaxml/: Combinators.hs  DTypes.hs  Generate.hs  HughesPJ.hs  Lex.hs  Parse.hs  Pretty.hs  Types.hs
Halipeto/: Demo.lhs  Dictionary.lhs  Functions.lhs  Intro.lhs  Pages.lhs  SimpleDB.lhs  Template.lhs  Utilities.lhs
Halipeto/FromHaxml/: HuttonMeijerWallace.hs
demo/database/: default-demo.haldx  default-real.haldx  group-list.haldx  locale-list.haldx  order-list.haldx  png-root.hal
demo/database/groups/: names.haldx
demo/database/groups/flux/: images.haldx
demo/database/groups/fractal/: images.haldx
demo/database/groups/maps/: images.haldx
demo/database/groups/objects/: images.haldx
demo/database/groups/skool/: images.haldx
demo/database/groups/square/: images.haldx
demo/database/groups/triangles/: images.haldx
demo/database/groups/tv/: images.haldx
demo/database/images/arms/: details.haldx
demo/database/images/ball-3a/: details.haldx
demo/database/images/beer/: details.haldx
demo/database/images/flat-1/: details.haldx
demo/database/images/flat-2a-filtered/: details.haldx
demo/database/images/flat-2b-painted/: details.haldx
demo/database/images/flat-4-painted/: details.haldx
demo/database/images/flat-5-filtered/: details.haldx
demo/templates/: front-page.html  image.html  index-group.html  index-locale.html  order.html  pancito.css
(+114 files in other folders)
